--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,7 +2,8 @@ MAINTAINERCLEANFILES = Makefile.in
 
 AM_CPPFLAGS = @DEFINES@ -I$(top_builddir)/src
 
-TESTS = test-query-parser test-header-parser test-multipart-formdata-parser
+TESTS = test-query-parser test-header-parser test-multipart-formdata-parser \
+		test-args
 
 check_PROGRAMS = $(TESTS)
 
@@ -14,3 +15,6 @@ test_header_parser_LDADD = $(top_srcdir)/src/libcgi.la
 
 test_multipart_formdata_parser_SOURCES = test-multipart-formdata-parser.cc
 test_multipart_formdata_parser_LDADD = $(top_srcdir)/src/libcgi.la
+
+test_args_SOURCES = test-args.cc
+test_args_LDADD = $(top_srcdir)/src/libcgi.la
