Improve db_path

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,11 +1,12 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-AM_CPPFLAGS = @DEFINES@
+AM_CPPFLAGS = @DEFINES@ -DLOCALSTATEDIR='"@localstatedir@/stuff"'
 
 bin_PROGRAMS = event
 noinst_LTLIBRARIES = libdb.la libcgi.la
 
-event_SOURCES = event.cc event.hh event_main.cc common.hh cgi.hh db.hh
+event_SOURCES = event.cc event.hh event_main.cc common.hh cgi.hh db.hh \
+				fsutils.cc fsutils.hh
 event_LDADD = libdb.la libcgi.la
 
 libcgi_la_SOURCES = cgi.hh common.hh cgi.cc \
