--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,15 +4,18 @@ AM_CPPFLAGS = @DEFINES@ -DLOCALSTATEDIR='"@localstatedir@/stuff"' \
 			  -DSYSCONFDIR='"@sysconfdir@/stuff"'
 
 bin_PROGRAMS = event sender
-noinst_LTLIBRARIES = libdb.la libcgi.la libutil.la
+noinst_PROGRAMS = test-sender
+noinst_LTLIBRARIES = libdb.la libcgi.la libutil.la libsender_client.la
 
-event_SOURCES = event.cc event.hh event_main.cc common.hh cgi.hh db.hh \
-				sender_client.cc sender_client.hh
-event_LDADD = libdb.la libcgi.la
+event_SOURCES = event.cc event.hh event_main.cc common.hh cgi.hh db.hh
+event_LDADD = libdb.la libcgi.la libsender_client.la
 
 sender_SOURCES = common.hh sender.cc json.hh json.cc
 sender_CPPFLAGS = $(AM_CPPFLAGS) @CURL_CFLAGS@
 sender_LDADD = libutil.la @CURL_LIBS@
+
+test_sender_SOURCES = common.hh test_sender.cc sender_client.hh
+test_sender_LDADD = libsender_client.la
 
 libcgi_la_SOURCES = cgi.hh common.hh cgi.cc \
 					query_parser.hh query_parser.cc \
@@ -30,3 +33,5 @@ libdb_la_LIBADD = @SQLITE3_LIBS@
 libutil_la_SOURCES = common.hh fsutils.cc fsutils.hh config.cc config.hh \
 					 strutils.hh strutils.cc sockutils.hh sockutils.cc
 
+libsender_client_la_SOURCES = common.h sender_client.cc sender_client.hh
+libsender_client_la_LIBADD = libutil.la
