--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,7 +3,7 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CPPFLAGS = @DEFINES@ -I$(top_builddir)/src
 
 TESTS = test-query-parser test-header-parser test-multipart-formdata-parser \
-		test-args
+		test-args test-json
 
 check_PROGRAMS = $(TESTS)
 
@@ -18,3 +18,6 @@ test_multipart_formdata_parser_LDADD = $(top_srcdir)/src/libcgi.la
 
 test_args_SOURCES = test-args.cc
 test_args_LDADD = $(top_srcdir)/src/libcgi.la
+
+test_json_SOURCES = test-json.cc
+test_json_LDADD = $(top_srcdir)/src/libjson.la
