Split out common event code for future use

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -4,9 +4,11 @@
 /stamp-h1
 /libcgi.la
 /libdb.la
+/libevent.la
 /libjson.la
 /libutil.la
 /libsender_client.la
 /event
+/page
 /sender
 /test-sender
