--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,1 @@
-.deps
-.libs
-*.o
-*.lo
-Makefile
-Makefile.in
-/aclocal.m4
-/autom4te.cache
-/compile
-/config.guess
-/config.log
-/config.rpath
-/config.status
-/config.sub
-/configure
-/depcomp
-/install-sh
-/ltmain.sh
-/libtool
-/missing
-/mkinstalldirs
-/test-driver
+build/
